# udp-video-wall

./: .gitignore  README.md  pyproject.toml  tasks.py
client/: client.py
commons/: config.py  logger.py  socket_entity.py  state.py
server/: client_listener.py  server.py
