[tool.poetry]
name = "udp-video-wall"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
imutils = "^0.5.4"
invoke = "^1.7.1"
numpy = "^1.22.4"
opencv-python = "^4.6.0"
pyzmq = "^25.0.2"
typer = "^0.4.1"
vidgear = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
